[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
resolver = "2"
members = [
  "examples/simple-wasm",
  "fuel-client",
  "fuel-core",
  "fuel-indexer/derive",
  "fuel-indexer/indexer",
  "fuel-indexer/lib",
  "fuel-indexer/schema",
  "interfaces",
  "txpool",
  "xtask",
  "block_executer",
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"


[patch.crates-io]
fuel-vm = { git = 'https://github.com/FuelLabs/fuel-vm.git', branch = "substorage" }