[package]
name = "fuel-relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuel-relayer"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
ethers-contract = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-contract", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-core", default-features = false }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-middleware", default-features = false }
#futures-util = "^0.3.18"
ethers-providers = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-providers", default-features = false }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs.git", package = "ethers-solc", default-features = false }
features = "0.10"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
